# ChowProtoPlug

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup_module.sh
.github/: FUNDING.yml
TestModule/: CMakeLists.txt  main.cpp
installers/mac/: ChowProtoPlug.pkgproj  Intro.txt  build_mac_installer.sh
installers/windows/: ChowProtoPlug_Install_Script.iss  build_win_installer.sh
modules/: CMakeLists.txt
modules/cmake/: WarningFlags.cmake
scripts/: mac_builds.sh  setup_module.sh  validate.sh  win_builds.sh
src/: CMakeLists.txt  ChowProtoPlug.cpp  ChowProtoPlug.h  HotReloadedModule.cpp  HotReloadedModule.h  Logger.h  ModuleConfig.h  ModuleParams.cpp  ModuleParams.h  PluginEditor.cpp  PluginEditor.h  pch.h
src/visualizers/: Oscilloscope.cpp  Oscilloscope.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
